--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-bootstrap": "^2.2.0",
     "react-datetime-picker": "^3.5.0",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
+    "react-modal-resizable-draggable": "^0.1.6",
+    "react-new-window": "^0.2.1",
     "react-offcanvas": "^0.4.0",
     "react-paginate": "^8.1.2",
     "react-router-dom": "^6.2.2",
